--- a/module3-solution/css/styles.css
+++ b/module3-solution/css/styles.css
@@ -103,14 +103,23 @@ body {
 
 /********** Large devices only **********/
 @media (min-width: 1200px) {
+  #box1,#box2,#box3{
+    height: 150px;
+  }
 }
 
 /********** Medium devices only **********/
 @media (min-width: 992px) and (max-width: 1199px) {
+  #box1,#box2,#box3{
+    height: 180px;
+  }
 }
 
 /********** Small devices only **********/
 @media (min-width: 768px) and (max-width: 991px) {
+  #box1,#box2,#box3{
+    height: 200px;
+  }
 }
 
 /********** Extra small devices only **********/
@@ -170,6 +179,7 @@ body {
     font-size: 6vw;
   }
   /* End Header */
+  
 
 }
 
